--- a/SMHET.tex
+++ b/SMHET.tex
@@ -372,9 +372,10 @@ The energy eigenvalues have the form
 \end{equation}
 The transition dipole operator can be decomposed into its components,
 \begin{equation}
-{\bf \hat{\mu} } = \hat{\mu}_x {\bf \hat{i}} + \hat{\mu}_y {\bf \hat{j}} + \hat{\mu}_z {\bf \hat{k}}.
+{\bf \hat{\mu} } = \hat{\mu}_x \: {\bf i} + \hat{\mu}_y \: {\bf j} + \hat{\mu}_z \: {\bf k}.
 \end{equation}
-The transition dipole integrals can be evaluated analytically,
+The transition dipole integral components can be evaluated analytically, for example, the 
+$x$-component has the form
 \begin{align*}
 \langle \psi_{nx,ny,nz} |  \hat{\mu}_x | \psi_{nx',ny',nz'} \rangle = e \: \delta_{ny,ny'} \: \delta_{nz,nz'} \:
 \frac{L (\pi (n_x - n_x'){\rm sin}(\pi(n_x - n_x'))+{\rm cos}(\pi(n_x-n_x'))-1) }{\pi^2 (n_x - n_x')^2 } \\
@@ -392,8 +393,8 @@ Using the above expressions and following this labeling scheme, the diagonal mat
 \end{align}
 and the off-diagonal matrix elements can be evaluated as
 \begin{align}
-\langle \Phi_0 | \hat{H}(t) | \Phi_i^a \rangle &= \langle \psi_i | {\bf E}(t) \cdot {\bf \hat{\mu}} | \psi_a \rangle \\
-\langle \Phi_i^a | \hat{H}(t) | \Phi_j^b \rangle &= \delta_{ij} \langle \psi_a | {\bf E}(t) \cdot {\bf \hat{\mu}} | \psi_b \rangle - \delta_{ab} \psi_i | {\bf E}(t) \cdot {\bf \hat{\mu}} | \psi_j \rangle.
+\langle \Phi_0 | \hat{H}(t) | \Phi_i^a \rangle &=  {\bf E}(t) \cdot \langle \psi_i |  {\bf \hat{\mu}} | \psi_a \rangle \\
+\langle \Phi_i^a | \hat{H}(t) | \Phi_j^b \rangle &= \delta_{ij}   {\bf E}(t) \cdot \langle \psi_a |  {\bf \hat{\mu}} | \psi_b \rangle - \delta_{ab}  {\bf E}(t) \cdot \langle \psi_i | {\bf \hat{\mu}} | \psi_j \rangle.
 \end{align} 
 
 
