--- a/SMHET.tex
+++ b/SMHET.tex
@@ -229,7 +229,7 @@ with a PIW Au NC transition at 3.1 eV, and
 a $d=685nm$ dielectric nanosphere has narrow scattering resonances (whispering gallery modes [WGM]) 
 that overlap with multiple transitions between 1.3 and 3.3 eV.  The $2nm Au$ nanosphere has a broad absorption peak associated with its LSPR that partially
 overlaps with a dipole-allowed transition in the PIW Au NC at 2.5 eV. 
-As proxies of the hot-carrier dynamics in the Au NC, we plot the population dynamics of the highest and lowest energy orbitals in our active space, which lie
+As proxies of the hot-carrier dynamics in the Au NC, we plot the population dynamics of the highest and lowest energy orbitals in the Au NC active space, which lie
 2.2 eV above and 1.6 eV below the Fermi energy, respectively (Figure 1 (e) and (f)).  Snapshots of the populations of all active
 orbitals in the Au NC model at various times are also provided in the SI (see Figure S1).  
 We observe that the LSPR generates a relatively small
@@ -301,17 +301,17 @@ predominately Whispering Gallery Mode visible resonances.  The
 transitions in the Au NC model, and this structure shows most efficient
 generation of hot-electrons in the most energetic orbitals included in our
 active space (Panel {\bf (b)}), and more efficiently generation of
-hot holes in the lowest energy orbitals included in our active space (Panel
+hot holes in the lowest energy orbitals included in the Pt NC active space (Panel
 {\bf (c)}).   }
 \end{center}
 \end{figure}
 To demonstrate the exquisite tunability of the dielectric scattering resonances, and their 
-commensurate impact on the electronic dynamics, we consider SMA by a series of Au-decorated dielectric
-nanospheres with sizes between 6
--Frequency of scattering resonances can be systematically varied via geometry
--Progression of geometries can be brought progressively into resonance with Au transitions
--Both resonant and off-resonant scattering is observed to lead to efficient hot-carrier generation
--On resonance, shows 2-fold enhancement in hot-carrier generation.
+commensurate impact on the electronic dynamics, we consider SMA by a series of 5 different Au-decorated dielectric
+nanospheres.  This progression from $d=705 nm$ to $d=685 nm$ brings the dielectric scattering modes progressively 
+into resonance with the dipole-allowed transition in the PIW Au NC (see Figure 3 (a)).  We observe efficient hot-carrier
+generation from SMA in all of these structures, though SMA from the $d=685 nm$ structure leads to most efficient generation
+of hot carriers in the highest and lowest energy orbitals in the Au NC active space (see Figure 3(b) and 3(c)), 
+most likely owing to the strong overlap between the scattering resonances and the transitions in the Au NC.
 
 Clear distinction between the three regimes is also o
 The second figure (Figure 4) depicts the scattering spectra of a succession of differently sized dielectric nanospheres
@@ -320,18 +320,33 @@ has the best alignment with the gold transitions, and similarly, the 685nm nanos
 in generating both hot-electrons and hot-holes. 
 
 
-The scattering of the dielectric on the spectra compared with the Platinum transitions has a unique significance when 
+%In this work, we develop
+%a multi-scale modeling approach for elucidating the hot-carrier dynamics initiated by scattering mediated
+%absorption.  Our calculations reveal that unique hot carrier distributions and dynamics arise
+%from scattering mediated absorption as compared plasmon excitation, and also suggest that in
+%a variety of circumstances, scattering mediated absorption may lead to more
+%efficient hot carrier generation than plasmon resonance under the same external illumination
+%conditions.  These results are an important first step in understanding the phenomena of
+%scattering mediate hot carrier generation, which has potential for expanding the
+%palette of materials that can be utilized for hot-carrier mediated photochemistry beyond plasmonic metals,
+%and for enabling unique pathways for photocatalytic transformations.
+
+-have developed a multi-scale theoretical method for modeling hot-carrier generation subject to arbitrary time-varying fields
+-have demonstrated that dynamics of these carriers depend uniquely on the field dynamics, which can be tuned via the geometry of the structures
+-have demonstrated that under a variety of circumstances, SMA may exceed the efficiency of plasmon excitation of hot-carriers
+-The scattering of the dielectric on the spectra compared with the Platinum transitions has a unique significance when 
 compared with the dielectric-Au structure. Although platinum is a non-plasmonic metal in the visible range, it is also 
 capable of generating hot-electrons and hot-holes within the visible light range. This demonstrates this method of 
 hot electron generation is independent of plasmonic activity and potentially can be expanded to various more abundant and cost efficient metals as opposed to Au. 
-The diameter size 685nm is able to excite hot electrons and hot holes on the metal nanocubes on its surface showing its increased 
-efficiency over the rest of the sizes. 
-Extra figures, to be found in the supplemental information accompanying this paper, show the change in 
-occupancy of all the orbitals (with different energies each) in the different structures at various times, 
-for the different metals. ( Should we arrange the figures in the supplemental information in groups based 
-upon structure, metal {for this paragraph this is how I will arrange them} or time step??) We are able to 
-observe in the figures for both metals, that the nanocube cube structures cease to change their orbital 
-occupancy after the 20$^{{\rm th}}$ timestep. Similarly we find that the Fabry-Perot structures??
+
+%The diameter size 685nm is able to excite hot electrons and hot holes on the metal nanocubes on its surface showing its increased 
+%efficiency over the rest of the sizes. 
+%Extra figures, to be found in the supplemental information accompanying this paper, show the change in 
+%occupancy of all the orbitals (with different energies each) in the different structures at various times, 
+%for the different metals. ( Should we arrange the figures in the supplemental information in groups based 
+%upon structure, metal {for this paragraph this is how I will arrange them} or time step??) We are able to 
+%observe in the figures for both metals, that the nanocube cube structures cease to change their orbital 
+%occupancy after the 20$^{{\rm th}}$ timestep. Similarly we find that the Fabry-Perot structures??
 
 \newpage
 \section{Supplementary Information}
@@ -394,7 +409,7 @@ Using the above expressions and following this labeling scheme, the diagonal mat
 and the off-diagonal matrix elements can be evaluated as
 \begin{align}
 \langle \Phi_0 | \hat{H}(t) | \Phi_i^a \rangle &=  {\bf E}(t) \cdot \langle \psi_i |  {\bf \hat{\mu}} | \psi_a \rangle \\
-\langle \Phi_i^a | \hat{H}(t) | \Phi_j^b \rangle &= \delta_{ij}   {\bf E}(t) \cdot \langle \psi_a |  {\bf \hat{\mu}} | \psi_b \rangle - \delta_{ab}  {\bf E}(t) \cdot \langle \psi_i | {\bf \hat{\mu}} | \psi_j \rangle.
+\langle \Phi_i^a | \hat{H}(t) | \Phi_j^b \rangle &=   {\bf E}(t) \cdot \langle \psi_a |  {\bf \hat{\mu}} | \psi_b \rangle \delta_{ij}  - {\bf E}(t) \cdot \langle \psi_i | {\bf \hat{\mu}} | \psi_j \rangle \delta_{ab}.
 \end{align} 
 
 
