--- a/SMHET.tex
+++ b/SMHET.tex
@@ -1,4 +1,4 @@
-\documentclass[journal=jpclcd,manuscript=letter]{achemso}
+\documentclass[journal=jpclcd,manuscript=article]{achemso}
 \pdfoutput=1
 \usepackage{gensymb}
 \usepackage{amsmath}
@@ -23,7 +23,7 @@
 \email{foleyj10@wpunj.edu}
 
 %Title of paper
-\title{Unique hot-carrier distributions from scattering-mediated absorption}
+\title{Unique hot-carrier distributions from scattering mediated absorption}
 % Date
 \date{\today}
 
