--- a/SMHET.tex
+++ b/SMHET.tex
@@ -23,7 +23,7 @@
 \email{foleyj10@wpunj.edu}
 
 %Title of paper
-\title{Unique hot-carrier distributions from scattering mediated absorption}
+\title{Unique hot carrier distributions from scattering mediated absorption}
 % Date
 \date{\today}
 
@@ -44,14 +44,14 @@ shown that composite nanostructures that enable the interplay between dielectric
 absorption in small metal nanostructures, a phenomenon termed scattering-mediated absorption, can be 
 used to mediate energetic carrier transfer and selective photochemistry with 
 low-intensity light while completely circumventing plasmon resonance.  In this work, we develop 
-a multi-scale modeling approach for elucidating the hot-carrier dynamics initiated by scattering mediated
+a multi-scale modeling approach for elucidating the hot carrier dynamics initiated by scattering mediated
 absorption.  Our calculations reveal that unique hot carrier distributions and dynamics arise 
-from scattering mediated absorption as compared plasmon excitation, and also suggest that in 
+from scattering mediated absorption as compared to plasmon excitation, and also suggest that in 
 a variety of circumstances, scattering mediated absorption may lead to more
 efficient hot carrier generation than plasmon resonance under the same external illumination
 conditions.  These results are an important first step in understanding the phenomena of
-scattering mediate hot carrier generation, which has potential for expanding the
-palette of materials that can be utilized for hot-carrier mediated photochemistry beyond plasmonic metals,
+scattering mediated hot carrier generation, which has potential for expanding the
+palette of materials that can be utilized for hot carrier mediated photochemistry beyond plasmonic metals,
 and for enabling unique pathways for photocatalytic transformations.
 \end{abstract}
 
@@ -72,13 +72,13 @@ environment~\cite{SX_Science_2002,BCN_ChemRev_2005,GB_NatPhoton_2010}.  An emerg
 and a growing number of reports are demonstrating the ability of PHET to catalyze energetically demanding chemical 
 reactions~\cite{CXL_NatureChem_2011,MZL_Science_2013,MLL_NanoLett_2013,LFP_AC_2015,ZHX_NatPhoton_2016,ZJM_ACSNano_2016,SZZ_PNAS_2016,SCR_JPCC_2016}.
 
-In PHET, the collective plasmon excitation decays rapidly (on a ~10 femtosecond timescale) to a non-equilibrium distribution of energetic electron-hole pairs, or a so-called hot-electron 
-distribution~\cite{KAC_ACSCatalysis_2013,GZG_JPCC_2013,SNJ_NatComm_2014,WCM_Science_2015,MWW_NatComm_2015, BSN_ACSNano_2016}  
-Hot-electrons can deposit energy into reactive degrees of freedom of molecules adsorbed to the nanoparticle surface, thereby initiating chemical transformations.  Despite the considerable progress made in 
+In PHET, the collective plasmon excitation decays rapidly (on a ~10 femtosecond timescale) to a non-equilibrium distribution of energetic electron-hole pairs, or a so-called hot carrier 
+distribution~\cite{KAC_ACSCatalysis_2013,GZG_JPCC_2013,SNJ_NatComm_2014,WCM_Science_2015,MWW_NatComm_2015, BSN_ACSNano_2016}.  
+Hot carriers can can deposit energy into reactive degrees of freedom of molecules adsorbed to the nanoparticle surface, thereby initiating chemical transformations.  Despite the considerable progress made in 
 demonstrating the potential of the paradigm of PHET, its widespread application faces several challenges. The intrinsic optical properties of noble metals that give rise to the extraordinarily 
-large absorption cross sections associated with LSPR are also fundamentally related to the broad energy spectra and short lifetimes associated with LSPR and the subsequent hot-electron 
+large absorption cross sections associated with LSPR are also fundamentally related to the broad energy spectra and short lifetimes associated with LSPR and the subsequent hot carrier 
 distributions~\cite{KS_JCP_1983}. 
-Furthermore, the timescale of hot-electron relaxation competes 
+Furthermore, the timescale of hot carrier relaxation competes 
 with transfer to adsorbate states (both occur on 100 fs timescales), which fundamentally limits the efficiency of energy transfer~\cite{WCM_Science_2015}.  Finally, the most promising plasmonic materials typically have poor catalytic activity, and similarly,
 good catalytic metals typically are poor light harvesters~\cite{SZZ_PNAS_2016}.
 
@@ -89,37 +89,37 @@ nanostructures that effectively delegate the light-harvesting and catalytic func
 demonstrated an antenna-reactor concept that leverages the near-field enhancement from aluminum plasmons to generate energetic carriers on 
 palladium islands and showed the efficacy of this strategy for the photcatalytic transformation of acetylene to ethylene~\cite{SZZ_PNAS_2016}.
 Two of the current authors, along with Sun and co-workers, demonstrated a phenomena known as scattering-mediated absorption where dielectric
-scattering resonances in SiO$_2$ ionospheres were utilized to induce resonant absorption in non-plasmonic platinum nanoparticles in SiO$_2$/Pt nanohybrids~\cite{ZHX_NatPhoton_2016}.
+scattering resonances in SiO$_2$ nanospheres were utilized to induce resonant absorption in non-plasmonic platinum nanoparticles in SiO$_2$/Pt nanohybrids~\cite{ZHX_NatPhoton_2016}.
 The scattering-mediated absorption (SMA) phenomena was also observed to induce highly selective photocatalytic oxidation of benzyl alcohol to benzaldehyde~\cite{ZHX_NatPhoton_2016}.
 Zhang {\it et al.} independently described a SMA phenomenon in Au-TiO$_2$ nanohybrids that leveraged so-called whispering gallery modes to 
-enhance plasmonic and non-plasmonic absorption in gold nanoparticles, and demonstrated these structures efficacy for photocatalytic water splitting~\cite{ZJM_ACSNano_2016}.
-Interestingly, hot-carrier transfer was implicated in the photocatalytic mechanisms that resulted from these SMA phenomena~\cite{ZHX_NatPhoton_2016,ZJM_ACSNano_2016}.
-The prospect of using SMA in hybrid dielectric/metal nanostructures to initiate hot-carrier generation and transfer is particularly 
+enhance plasmonic and non-plasmonic absorption in gold nanoparticles, and demonstrated these structure's efficacy for photocatalytic water splitting~\cite{ZJM_ACSNano_2016}.
+Interestingly, hot carrier transfer was implicated in the photocatalytic mechanisms that resulted from these SMA phenomena~\cite{ZHX_NatPhoton_2016,ZJM_ACSNano_2016}.
+The prospect of using SMA in hybrid dielectric/metal nanostructures to initiate hot carrier generation and transfer is particularly 
 compelling as it could completely circumvent plasmon excitation.  Not only does this open up possibilities to utilize a broader palette of materials, it also
 presents the possibility of realizing unique photocatalytic pathways owing to differences in the distributions and dynamics of energetic carriers produced by SMA compared
 to those produced by plasmon excitation.    
 
-The push to identify novel structures for mediating hot-carrier generation and transfer has been paralleled by 
+The push to identify novel structures for mediating hot carrier generation and transfer has been paralleled by 
 efforts to develop theoretical methodologies to elucidate these processes.  The underlying electronic
 structure has been treated both within free-electron models confined by potential wells~\cite{GZG_JPCC_2013,ZG_JPCC_2014,MLK_ACSNano_2014,KPB_SciRep_2015,SAG_ACSPhotonics_2016} (here called
 ``particle-in-a-well" [PIW] models), as well as by {\it ab initio} approaches~\cite{SNJ_NatComm_2014,BMN_NatComm_2015,MWW_NatComm_2015,BSN_ACSNano_2016}.
 Using PIW models, Govorov and co-workers developed a theory of 
-hot-electron generation within the framework of time-dependent perturbation theory that
+hot carrier generation within the framework of time-dependent perturbation theory that
 has elucidated a variety of shape- and size-dependent factors for optimizing 
-the hot-carrier generation~\cite{GZG_JPCC_2013,ZG_JPCC_2014}.  A similar approach was also pursued by Kumarasinghe {\it et al.} suggesting
-that nanorods are exceptionally good structures for hot-carrier generation~\cite{KPB_SciRep_2015}.  Garc\'ia de Abajo and co-workers recently described a 
+the hot carrier generation~\cite{GZG_JPCC_2013,ZG_JPCC_2014}.  A similar approach was also pursued by Kumarasinghe {\it et al.} suggesting
+that nanorods are exceptionally good structures for hot carrier generation~\cite{KPB_SciRep_2015}.  Garc\'ia de Abajo and co-workers recently described a 
 quantum master equation approach with an underlying PIW model that elucidated a number of key factors that influence
-hot-carrier excitation and decay dynamics~\cite{SAG_ACSPhotonics_2016}.  The utilization of {\it ab initio} approaches by Sundararaman {\it et al} 
-has also provided valuable insights into the role that a metals band-structure plays
-in determining the efficiency of hot-carrier generation, and particularly in the asymmetry between hot-electron
+hot carrier excitation and decay dynamics~\cite{SAG_ACSPhotonics_2016}.  The utilization of {\it ab initio} approaches by Sundararaman {\it et al} 
+has also provided valuable insights into the role that a metal's band-structure plays
+in determining the efficiency of hot carrier generation, and particularly in the asymmetry between hot-electron
 and hot-hole generation~\cite{SNJ_NatComm_2014}.  Nordlander and co-workers have directly compared free-electron and {\it ab initio} approaches
-and found negligible impact on hot-carrier generation and dynamics in Ag nanospheres resulting from electron correlation~\cite{MLK_ACSNano_2014}, 
-though Bernardi {\it et al} have demonstrated that many-body effects are important in the hot-carrier dynamics resulting
+and found negligible impact on hot carrier generation and dynamics in Ag nanospheres resulting from electron correlation~\cite{MLK_ACSNano_2014}, 
+though Bernardi {\it et al} have demonstrated that many-body effects are important in the hot carrier dynamics resulting
 from surface plasmon polaritons in gold and silver~\cite{BMN_NatComm_2015}.
 
-We develop a novel approach for studying hot-carrier dynamics that may arise from arbitrary electromagnetic
+We develop a novel approach for studying hot carrier dynamics that may arise from arbitrary electromagnetic
 fields, including the unique near-fields that arise from SMA on hybrid dielectric-metal nanoparticles and LSPR
-on noble metal nanoparticles.
+on noble metal nanoparticles.  %EMPHASIZE THAT THIS IS A VALUABLE TOOL FOR TREATING SHAPED PULSES, ETC
 We consider the electronic degrees of freedom on the metal nanoparticle subject to the time-dependent Hamiltonian 
 \begin{equation}\label{eq:TDHam}
 \hat{H}(t) = \hat{H}_{el} - {\bf E}(t) \cdot \hat{\mu}, 
@@ -130,7 +130,7 @@ We compute the time-domain field
 using a commercial simulator based on the finite-difference time-domain [FDTD] method~\cite{Lumerical}.  
 Incorporating  ${\bf E}(t)$ from these FDTD simulations into the time-dependent Hamiltonian enables us to investigate the unique ways
 in which the electronic degrees of freedom evolve under the influence of the distinct time-varying fields that result
-from LSPR and from dielectric scattering resonances, allowing us a unique window into the hot-carrier dynamics resulting from LSPR as compared
+from LSPR and from dielectric scattering resonances, allowing us a unique window into the hot carrier dynamics resulting from LSPR as compared
 to SMA.  Further details on the FDTD simulations can be found in the Supplementary Information [SI]. 
 
 The many-electron wavefunction of the metal nanoparticles is expanded in terms of a configuration-interaction expansion that
@@ -148,7 +148,7 @@ The time-evolution of the wavefunction can be subsumed in the expansion coeffici
 i\hbar \frac{ d}{dt} {\bf c}(t) = {\bf H}(t) {\bf c}(t)
 \end{equation}
 where ${\bf c}(t)$ is the vector of complex expansion coefficients and ${\bf H}(t)$ is the time-dependent Hamiltonian
-matrix.  The Hamiltonian matrix is comprised of three unique blocks in the CIS model,  
+matrix.  The Hamiltonian matrix is comprised of three unique classes of elements in the CIS model,  
 \begin{equation}
   {\bf H}(t) 
   \mbox{=}
@@ -156,12 +156,12 @@ matrix.  The Hamiltonian matrix is comprised of three unique blocks in the CIS m
     \langle \Phi_0 | \hat{H}(t) | \Phi_0 \rangle    &     \langle \Phi_0 | \hat{H}(t) | \Phi_i^a \rangle    \\
   \langle \Phi_j^b | \hat{H}(t) | \Phi_0 \rangle    &   \langle \Phi_j^b | \hat{H}(t) | \Phi_i^a \rangle \end{pmatrix}.
 \end{equation}
-Explicit expressions for Hamiltonian matrix elements are given for the NC model in the SI.
+Explicit expressions for Hamiltonian each class of matrix elements are given in the SI.
 
 Given the simplicity of the underlying electronic Hamiltonian, the field-free Hamiltonian matrix is diagonal, and only the dipolar
 interaction of the nanoparticle with the external field can induce transitions among the electronic configurations, hence the treatment in 
 this work neglects excited-state decay contributions from electron-electron scattering.  These contributions will be explored in future work.  
-Also because of the diagonal nature of field-free Hamiltonian, each configuration $|\Phi_i^a\rangle$ is an eigenfunction
+Also because of the diagonal nature of the field-free Hamiltonian, each configuration $|\Phi_i^a\rangle$ is an eigenfunction
 of the field-free Hamiltonian.  This simplifies the interpretation of the electronic structure relative to the CIS 
 wavefunction in molecular quantum mechanics where electron repulsion is included in the Hamiltonian
 and the excited electronic eigenfunctions are linear combinations of singly-excited configurations. 
@@ -169,7 +169,7 @@ The multiplication of the Hamiltonian matrix on the coefficient vector generates
 a variety of algorithms are known that use this information to propagate the wavefunction in time.  Here we use a symplectic integrator
 described in Ref.~\citenum{SP_JCP_96}.  Propagation of the CIS wavefunction is referred to as the TDCIS method throughout.
 
-We analyze the hot-carrier distribution and dynamics that results from SMA and LSPR excitation by computing the 
+We analyze the hot carrier distribution and dynamics that results from SMA and LSPR excitation by computing the 
 instantaneous populations of orbitals both above and below the Fermi level of the metal nanostructure.   
 In our model, the orbitals are energy eigenstates of a 1-electron Hamiltonian and have well-defined kinetic energy,
 and the orbital populations are given by the diagonal elements of the 1-electron reduced density matrix [1-RDM],
@@ -204,7 +204,7 @@ Both dielectric scattering resonances show more efficient generation of hot-elec
 
 %% E_f gold is 5.52 eV, Nels = 472
 %% E_f Pt   is 9.40 eV, Nels = 1104
-The TDCIS approach is applied to investigate hot-carrier dynamics of $L=2nm$ gold and platinum NCs that are (a) free-standing so that
+The TDCIS approach is applied to investigate hot carrier dynamics of $L=2nm$ gold and platinum NCs that are (a) free-standing so that
 the dynamics are induced by optical resonances supported by the NC alone and (b) supported on various dielectric nanospheres so
 that the dynamics are also induced by time-evolving nearfields arising from dielectric scattering resonance.  We choose these metals because 
 attachment of gold and platinum metal nanoparticles to various sized dielectric nanospheres has been experimentally demonstrated; future
@@ -229,14 +229,14 @@ with a PIW Au NC transition at 3.1 eV, and
 a $d=685nm$ dielectric nanosphere has narrow scattering resonances (whispering gallery modes [WGM]) 
 that overlap with multiple transitions between 1.3 and 3.3 eV.  The $2nm Au$ nanosphere has a broad absorption peak associated with its LSPR that partially
 overlaps with a dipole-allowed transition in the PIW Au NC at 2.5 eV. 
-As proxies of the hot-carrier dynamics in the Au NC, we plot the population dynamics of the highest and lowest energy orbitals in the Au NC active space, which lie
+As proxies of the hot carrier dynamics in the Au NC, we plot the population dynamics of the highest and lowest energy orbitals in the Au NC active space, which lie
 2.2 eV above and 1.6 eV below the Fermi energy, respectively (Figure 1 (e) and (f)).  Snapshots of the populations of all active
 orbitals in the Au NC model at various times are also provided in the SI (see Figure S1).  
 We observe that the LSPR generates a relatively small
-population of hot-carriers with field-driven dynamics that evolve on a short (~10 fs) timescale.  FP resonance in this
+population of hot carriers with field-driven dynamics that evolve on a short (~10 fs) timescale.  FP resonance in this
 case lead to significantly more efficient hot-hole generation with field driven dynamics that evolve on a moderate (~50 fs) timescale (Figure 1(f)), while
 WGM resonances lead to significantly more efficient hot-electron generation with field drive dynamics that evolve on a much longer (~200 fs) timescale
-(Figure 1(e) and Figure 3(b)).  Another key distinction hot-carrier density generated by the Au LSPR and by SMA is that the hot-carrier density
+(Figure 1(e) and Figure 3(b)).  Another key distinction hot carrier density generated by the Au LSPR and by SMA is that the hot-carrier density
 of the former is concentrated within 1 eV of the Fermi level, while SMA leads to appreciable density $\pm 2$ eV of the Fermi level (see Figure S1).
 
 These differences can be attributed in part to the unique ways in which each resonant interaction simultaneously modulates the incident optical
@@ -279,8 +279,8 @@ overlap with transitions at 1.8, 1.8, and 1.95 eV.  Again, the dielectric scatte
 approximately an order of magnitude 
 nearfield enhancement in the vicinity of the Pt NC, while the nearfield enhancement provided by the lone 
 Pt nanoparticle is much smaller ($|{\bf E}|/|{\bf E_0}|$ at $\lambda=200nm$ corresponding to the extinction maximum, see Figure 2 (a), (b), and (c)).
-Due to its relatively weak optical interaction, scattering of the Pt nanoparticle does not lead to a large density of hot-carriers; small populations
-of carriers are created near the Fermi energy (see Figure S2).  These hot-carriers can be attributed mostly to direct interaction with the 
+Due to its relatively weak optical interaction, scattering of the Pt nanoparticle does not lead to a large density of hot carriers; small populations
+of carriers are created near the Fermi energy (see Figure S2).  These hot carriers can be attributed mostly to direct interaction with the 
 incident pulse, which has a peak field strength of $E_0 \approx 614,000,000 \: V/m$, (see SI for more details).
 SMA on the $d=270nm$ nanosphere
 leads to generation of hot carriers within 1 eV of the Fermi energy with dynamics that persist for moderate (~50 fs) timescales.
@@ -289,7 +289,7 @@ to the resonances of the $d=270nm$ dielectric NS or the Pt nanoparticle.  For ex
 more effective at generating holes in the lowest lying orbital ($E_F - 1.6 eV$) 
 and electrons in the highest 
 lying orbital ($E_F + 0.84 eV$) in the PIW Pt NC active space as compared to FP resonance of the $d=270nm$ NS (see Figure 2 (e) and (f)).  
-The hot-carriers driven by WGM also show much more persistent dynamics, and continue to evolve beyond 100 fs (see Figure 2 (e) and (f) and Figure S2).
+The hot carriers driven by WGM also show much more persistent dynamics, and continue to evolve beyond 100 fs (see Figure 2 (e) and (f) and Figure S2).
 \begin{figure}
 \begin{center}
 \includegraphics[width=6in]{figs/Au_WGM_Spectrum_and_Trajectories.png}
@@ -308,7 +308,7 @@ hot holes in the lowest energy orbitals included in the Pt NC active space (Pane
 To demonstrate the exquisite tunability of the dielectric scattering resonances, and their 
 commensurate impact on the electronic dynamics, we consider SMA by a series of 5 different Au-decorated dielectric
 nanospheres.  This progression from $d=705 nm$ to $d=685 nm$ brings the dielectric scattering modes progressively 
-into resonance with the dipole-allowed transition in the PIW Au NC (see Figure 3 (a)).  We observe efficient hot-carrier
+into resonance with the dipole-allowed transition in the PIW Au NC (see Figure 3 (a)).  We observe efficient hot carrier
 generation from SMA in all of these structures, though SMA from the $d=685 nm$ structure leads to most efficient generation
 of hot carriers in the highest and lowest energy orbitals in the Au NC active space (see Figure 3(b) and 3(c)), 
 most likely owing to the strong overlap between the scattering resonances and the transitions in the Au NC.
@@ -321,19 +321,19 @@ in generating both hot-electrons and hot-holes. 
 
 
 %In this work, we develop
-%a multi-scale modeling approach for elucidating the hot-carrier dynamics initiated by scattering mediated
+%a multi-scale modeling approach for elucidating the hot carrier dynamics initiated by scattering mediated
 %absorption.  Our calculations reveal that unique hot carrier distributions and dynamics arise
 %from scattering mediated absorption as compared plasmon excitation, and also suggest that in
 %a variety of circumstances, scattering mediated absorption may lead to more
 %efficient hot carrier generation than plasmon resonance under the same external illumination
 %conditions.  These results are an important first step in understanding the phenomena of
 %scattering mediate hot carrier generation, which has potential for expanding the
-%palette of materials that can be utilized for hot-carrier mediated photochemistry beyond plasmonic metals,
+%palette of materials that can be utilized for hot carrier mediated photochemistry beyond plasmonic metals,
 %and for enabling unique pathways for photocatalytic transformations.
 
--have developed a multi-scale theoretical method for modeling hot-carrier generation subject to arbitrary time-varying fields
+-have developed a multi-scale theoretical method for modeling hot carrier generation subject to arbitrary time-varying fields
 -have demonstrated that dynamics of these carriers depend uniquely on the field dynamics, which can be tuned via the geometry of the structures
--have demonstrated that under a variety of circumstances, SMA may exceed the efficiency of plasmon excitation of hot-carriers
+-have demonstrated that under a variety of circumstances, SMA may exceed the efficiency of plasmon excitation of hot carriers
 -The scattering of the dielectric on the spectra compared with the Platinum transitions has a unique significance when 
 compared with the dielectric-Au structure. Although platinum is a non-plasmonic metal in the visible range, it is also 
 capable of generating hot-electrons and hot-holes within the visible light range. This demonstrates this method of 
@@ -356,7 +356,7 @@ hot electron generation is independent of plasmonic activity and potentially can
 \begin{figure}
 \begin{center}
 \includegraphics[width=6in]{figs/Au_HotElectronDistribution_Comparison.png}
-\caption{Snapshots of changes in occupation of each orbital in the active space of the PIW Au NC model as a measure of instantaneous hot-carrier distributions.
+\caption{Snapshots of changes in occupation of each orbital in the active space of the PIW Au NC model as a measure of instantaneous hot carrier distributions.
 The change in orbital occupation is computed from elements of the time-dependent one-electron reduced density matrix ($^1$RDM) relative to
 their initial value, $D_p^p(t)-D_P^p(t=0)$ for several timepoints in the simulation.}
 \end{center}
@@ -366,7 +366,7 @@ their initial value, $D_p^p(t)-D_P^p(t=0)$ for several timepoints in the simulat
 \begin{figure}
 \begin{center}
 \includegraphics[width=6in]{figs/Pt_HotElectronDistribution_Comparison.png}
-\caption{Snapshots of changes in occupation of each orbital in the active space of the PIW Pt NC model as a measure of instantaneous hot-carrier distributions.
+\caption{Snapshots of changes in occupation of each orbital in the active space of the PIW Pt NC model as a measure of instantaneous hot carrier distributions.
 The change in orbital occupation is computed from elements of the time-dependent one-electron reduced density matrix ($^1$RDM) relative to
 their initial value, $D_p^p(t)-D_P^p(t=0)$ for several timepoints in the simulation.  }
 \end{center}
